--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
 
 <head>
@@ -9,27 +9,11 @@
 </head>
 
 <body>
-    <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-<body>
-    <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-    <section class="principal">
-        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-        <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
-</section>
-
-    <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
-<body>
-    <section class="container principal">
-        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-        <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
-    </section>
-
-
-</body>
-<section class="container principal">
+    <section class="principal container">
         <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
         <img src="img/Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
         <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00*</a>
-</section>
+    </section>
+</body>
 
-</html>   
+</html>
